--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,15 @@
     <title>Douda</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-NSQ01WD6TP"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-NSQ01WD6TP');
+  </script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
